[workspace]

[package]
name = "sqlmap-rs"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
description = "Type-safe asynchronous wrapper for the sqlmap REST API (sqlmapapi) with task lifecycle control and multi-format results"
authors = ["CORUM COLLECTIVE LLC (Santh Security)"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/santhreal/sqlmap-rs"
homepage = "https://santh.io"
documentation = "https://docs.rs/sqlmap-rs"
keywords = ["sqli", "security", "sqlmap", "injection", "vulnerability"]
categories = ["api-bindings", "web-programming"]
exclude = [".github/", "setup.sh", "environment.yml"]

[dependencies]
reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "process", "time", "sync", "io-util"] }
tracing = "0.1.40"

[dev-dependencies]
proptest = "1.0"
